data/derived/sp14/progs/unify/prog3200.ml.out
Characters 176-191:
  removeZero (add (padZero l1 l2));;
                  ^^^^^^^^^^^^^^^
Error: This expression has type int list * int list
       but an expression was expected of type int * 'a list
       Type int list is not compatible with type int 
